# lekhani-latex

./: Cargo.toml  README.md  build.rs  setup.iss
.github/workflows/: build-debian.yml  build-fedora.yml  build-macos.yml  build-windows.yml
assets/: Info.plist  gen_icon.py  lekhani-latex.desktop
src/: app.rs  buffer.rs  compiler.rs  completions.rs  lexer.rs  main.rs  preview.rs  types.rs
src/app/: editor.rs  menubar.rs  mod.rs  preview_panel.rs  statusbar.rs  tab.rs  toolbar.rs
src/app/layout/: menubar.rs  mod.rs  preview_panel.rs  statusbar.rs  toolbar.rs
src/buffer/: cursor.rs  edit.rs  mod.rs
src/compiler/: bridge.rs  mod.rs  parser.rs
src/components/: button.rs  dropdown.rs  mod.rs  textfield.rs
