[package]
name = "lekhani-latex"
version = "0.1.0"
edition = "2021"
description = "A modern, easy-to-use LaTeX editor with live preview"

[dependencies]
egui = "0.34"
eframe = { version = "0.34", features = ["default"] }
regex = "1"
image = "0.25"
thiserror = "2"
rfd = "0.17"
ureq = "3"
dirs = "6"

[build-dependencies]
winres = "0.1.12"
