[package]
name = "lekhani-latex"
version = "0.1.0"
edition = "2021"
description = "A modern, easy-to-use LaTeX editor with live preview"
license = "MIT"


[dependencies]
egui = "0.34"
eframe = { version = "0.34", features = ["default"] }
regex = "1"
image = "0.25"
thiserror = "2"
rfd = "0.17"
ureq = "3"
dirs = "6"
arboard = "3.6.1"
serde_json = "1.0.150"

[build-dependencies]
winres = "0.1.12"

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/lekhani-latex", dest = "/usr/bin/lekhani-latex", mode = "0755" },
    { source = "assets/logo.png", dest = "/usr/share/icons/hicolor/256x256/apps/lekhani-latex.png", mode = "0644" },
    { source = "assets/lekhani-latex.desktop", dest = "/usr/share/applications/lekhani-latex.desktop", mode = "0644" }
]
requires = ["texlive-pdftex", "poppler-utils"]

[package.metadata.deb]
maintainer = "Borneel Bikash Phukan"
assets = [
    { source = "target/release/lekhani-latex", dest = "usr/bin/lekhani-latex", mode = "755" },
    { source = "assets/logo.png", dest = "usr/share/icons/hicolor/256x256/apps/lekhani-latex.png", mode = "644" },
    { source = "assets/lekhani-latex.desktop", dest = "usr/share/applications/lekhani-latex.desktop", mode = "644" }
]
depends = "$auto, texlive-latex-recommended, poppler-utils"
